@@ -1,3 +1,4 @@
+
 2001-10-22  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation from Marcel Telka <marcel@telka.sk>.
